# fintralive

./: README.md
helm/fintradex-collator/: Chart.yaml  README.md  values.yaml
helm/fintradex-collator/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
node/: Cargo.toml  README.md  build.rs
node/src/: chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  main.rs  rpc_old.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
runtime/: Cargo.toml  README.md  build.rs
runtime/src/: apis.rs  benchmarks.rs  constants.rs  lib.rs  voter_bags.rs
runtime/src/weights/: block_weights.rs
scripts/: deploy-gcp.sh  deploy-helm.sh  setup-gcp.sh
