[package]
name = "fintradex-node"
description = "FintradeX Node - A high-performance blockchain node for the FintradeX decentralized financial trading parachain. Built with Polkadot SDK, featuring Ethereum compatibility, cross-chain communication, and optimized for DeFi trading operations."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
log = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
jsonrpsee = { features = ["server"], workspace = true }
futures = { workspace = true }
serde_json = { workspace = true, default-features = true }
docify = { workspace = true }
color-print = { workspace = true }
polkadot-sdk = { workspace = true, features = ["node"] }
fintradex-runtime.workspace = true
sc-tracing.workspace = true
sc-tracing.default-features = true
prometheus-endpoint.workspace = true
prometheus-endpoint.default-features = true
sc-cli.default-features = true
sc-cli.workspace = true
sc-client-api.default-features = true
sc-client-api.workspace = true
sc-service.default-features = true
sc-service.workspace = true
sc-executor.default-features = true
sc-executor.workspace = true
# Frontier
fc-api = { workspace = true }
fc-cli = { workspace = true }
fc-consensus = { workspace = true }
fc-db = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc = { workspace = true, features = ["aura"] }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }
fp-account = { workspace = true }
fp-dynamic-fee = { workspace = true, features = ["default"] }
fp-evm = { workspace = true, features = ["default"] }
fp-rpc = { workspace = true, features = ["default"] }

[features]
default = ["rocksdb",
	"txpool",
	"rpc-binary-search-estimate"]
std = [
	"log/std",
	"fintradex-runtime/std",
	"polkadot-sdk/std",
]
rocksdb = [
	"sc-cli/rocksdb",
	"sc-service/rocksdb",
	"fc-cli/rocksdb",
	"fc-db/rocksdb",
	"fc-mapping-sync/rocksdb",
	"fc-rpc/rocksdb",
	"fintradex-runtime/with-rocksdb-weights",
]
txpool = ["fc-rpc/txpool"]
rpc-binary-search-estimate = ["fc-rpc/rpc-binary-search-estimate"]
runtime-benchmarks = [
	"fintradex-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"fintradex-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]
