[workspace.package]
license = "MIT-0"
authors = ["FintradeX Team <team@fintradex.com>"]
homepage = "https://github.com/fintradev/fintradex"
repository = "https://github.com/fintradev/fintradex.git"
edition = "2021"

[workspace]
default-members = [ "runtime"]
members = [
    "node",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
fintradex-runtime = { path = "./runtime", default-features = false }
clap = { version = "4.5.13" }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
color-print = { version = "0.3.4" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.22", default-features = false }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-contracts = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
prometheus-endpoint = { version = "0.17.1", default-features = false, package = "substrate-prometheus-endpoint" }
cumulus-primitives-proof-size-hostfunction = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-scheduler={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-referenda = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-asset-rate = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-treasury = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-salary = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-ranked-collective = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-core-fellowship = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-staking = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-nomination-pools = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-nomination-pools-benchmarking = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-nomination-pools-runtime-api = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-staking-reward-curve = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-insecure-randomness-collective-flip = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
serde = { version = "1.0.214", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
frame = { version = "0.8.1", default-features = false, package = "polkadot-sdk-frame" }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-sudo = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-child-bounties = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-asset-conversion = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-asset-conversion-ops = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-parameters={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-skip-feeless-payment={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-whitelist={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-collective={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-conviction-voting={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-election-provider-multi-phase={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-bags-list={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-session={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-session-benchmarking={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-fast-unstake={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-membership={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
pallet-evm-precompile-simple = {  git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
pallet-evm-precompile-modexp = {  git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
pallet-evm-precompile-sha3fips = {  git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
pallet-evm-chain-id = {  git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
pallet-dynamic-fee = {  git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-beefy-mmr = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-beefy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-offences-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-broker = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-xcm={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
polkadot-parachain-primitives={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
polkadot-runtime-common={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
staging-xcm={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
staging-xcm-builder={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
staging-xcm-executor={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
xcm-runtime-apis={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
cumulus-pallet-aura-ext={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
cumulus-pallet-session-benchmarking={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
cumulus-pallet-xcm={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
cumulus-primitives-aura={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
cumulus-primitives-core={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
cumulus-primitives-utility={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
pallet-collator-selection={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
parachains-common={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
staging-parachain-info={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fp-storage = { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fp-account = { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fc-api= { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fc-cli= { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fc-consensus= { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fc-db= { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fc-mapping-sync={ git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fc-rpc={ git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fc-rpc-core={ git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fc-storage={ git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
fp-dynamic-fee={ git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "stable2503", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
primitive-types = { version = "0.13.1", default-features = false }
